stream on new line for better formatted view